# TimeSeriesForecastAPI

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/application/: __init__.py  dto.py
src/application/services/: __init__.py  metrics.py
src/application/use_cases/: __init__.py  fit_model.py
src/domain/: __init__.py  entities.py  interfaces.py  value_objects.py
src/infrastructure/api/: __init__.py  controllers.py  dependencies.py
src/infrastructure/ml/: __init__.py  catboost_trainer.py
src/infrastructure/repositories/: __init__.py  model_repository.py
src/infrastructure/strategies/: __init__.py  direct.py  multioutput.py  recursive.py
src/presentation/: __init__.py  mappers.py  schemas.py
